sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: not found: value pluspetit
		if (pluspetit(i, i+1)==true) {
                    ^